@@ -74,6 +74,7 @@ check_PROGRAMS = \
 	clock1 \
 	clock2 \
 	clock3 \
+	clock4 \
 	quantity1 \
 	gc1
 
@@ -276,6 +277,9 @@ clock2_DEPENDENCIES = $(DEPENDENCIES)
 clock3_SOURCES = clock3.pa
 clock3_DEPENDENCIES = $(DEPENDENCIES)
 
+clock4_SOURCES = clock4.pa
+clock4_DEPENDENCIES = $(DEPENDENCIES)
+
 quantity1_SOURCES = quantity1.pa
 quantity1_DEPENDENCIES = $(DEPENDENCIES)
 
@@ -349,6 +353,7 @@ DEP_FILES=\
 	./$(DEPDIR)/clock1.Po \
 	./$(DEPDIR)/clock2.Po \
 	./$(DEPDIR)/clock3.Po \
+	./$(DEPDIR)/clock4.Po \
 	./$(DEPDIR)/quantity1.Po \
 	./$(DEPDIR)/gc1.Po
 
@@ -411,6 +416,7 @@ include ./$(DEPDIR)/time5.Po
 include ./$(DEPDIR)/clock1.Po
 include ./$(DEPDIR)/clock2.Po
 include ./$(DEPDIR)/clock3.Po
+include ./$(DEPDIR)/clock4.Po
 include ./$(DEPDIR)/quantity1.Po
 include ./$(DEPDIR)/gc1.Po
 
